[gd_scene load_steps=5 format=3 uid="uid://da1exan0mfhmu"]

[ext_resource type="Script" path="res://elements/level/level.gd" id="1_rtcky"]
[ext_resource type="Texture2D" uid="uid://wsyynlvpuuks" path="res://assets/Sprites/Space Game/BG.jpg" id="2_m12it"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ttkg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y7lio"]

[node name="Level" type="Node2D"]
script = ExtResource("1_rtcky")

[node name="Up" type="Area2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Up"]
collision_layer = 2
collision_mask = 2

[node name="UpPlayer" type="CollisionShape2D" parent="Up/StaticBody2D"]
position = Vector2(578, -10)
scale = Vector2(58, 1)
shape = SubResource("RectangleShape2D_5ttkg")

[node name="UpCollision" type="CollisionShape2D" parent="Up"]
position = Vector2(578, -10)
scale = Vector2(56, 1.5)
shape = SubResource("RectangleShape2D_5ttkg")

[node name="Down" type="Area2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Down"]
collision_layer = 2
collision_mask = 2

[node name="DownPlayer" type="CollisionShape2D" parent="Down/StaticBody2D"]
position = Vector2(578, 658)
scale = Vector2(58, 1)
shape = SubResource("RectangleShape2D_5ttkg")

[node name="DownCollision" type="CollisionShape2D" parent="Down"]
position = Vector2(578, 658)
scale = Vector2(56, 1.5)
shape = SubResource("RectangleShape2D_5ttkg")

[node name="Left" type="Area2D" parent="."]

[node name="LeftCollision" type="CollisionShape2D" parent="Left"]
position = Vector2(-10, 325)
scale = Vector2(1, 33)
shape = SubResource("RectangleShape2D_y7lio")

[node name="Right" type="Area2D" parent="."]

[node name="RightCollision" type="CollisionShape2D" parent="Right"]
position = Vector2(1163, 325)
scale = Vector2(1, 33)
shape = SubResource("RectangleShape2D_y7lio")

[node name="Background" type="CanvasLayer" parent="."]
layer = -128

[node name="Sprite2D" type="Sprite2D" parent="Background"]
visibility_layer = 512
position = Vector2(578, 199)
scale = Vector2(1.14551, 1)
texture = ExtResource("2_m12it")

[connection signal="body_entered" from="Up" to="." method="_on_up_body_entered"]
[connection signal="body_entered" from="Down" to="." method="_on_down_body_entered"]
[connection signal="body_entered" from="Left" to="." method="_on_left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_right_body_entered"]
